; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_gpu-delay.c_gpu_delay_filter_update.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_gpu-delay.c_gpu_delay_filter_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpu_delay_filter_data = type { i64, i64, i64, i64 }

@S_DELAY_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @gpu_delay_filter_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gpu_delay_filter_update(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.gpu_delay_filter_data*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.gpu_delay_filter_data*
  store %struct.gpu_delay_filter_data* %7, %struct.gpu_delay_filter_data** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @S_DELAY_MS, align 4
  %10 = call i64 @obs_data_get_int(i32* %8, i32 %9)
  %11 = mul i64 %10, 1000000
  %12 = load %struct.gpu_delay_filter_data*, %struct.gpu_delay_filter_data** %5, align 8
  %13 = getelementptr inbounds %struct.gpu_delay_filter_data, %struct.gpu_delay_filter_data* %12, i32 0, i32 0
  store i64 %11, i64* %13, align 8
  %14 = load %struct.gpu_delay_filter_data*, %struct.gpu_delay_filter_data** %5, align 8
  %15 = getelementptr inbounds %struct.gpu_delay_filter_data, %struct.gpu_delay_filter_data* %14, i32 0, i32 3
  store i64 0, i64* %15, align 8
  %16 = load %struct.gpu_delay_filter_data*, %struct.gpu_delay_filter_data** %5, align 8
  %17 = getelementptr inbounds %struct.gpu_delay_filter_data, %struct.gpu_delay_filter_data* %16, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = load %struct.gpu_delay_filter_data*, %struct.gpu_delay_filter_data** %5, align 8
  %19 = getelementptr inbounds %struct.gpu_delay_filter_data, %struct.gpu_delay_filter_data* %18, i32 0, i32 1
  store i64 0, i64* %19, align 8
  %20 = load %struct.gpu_delay_filter_data*, %struct.gpu_delay_filter_data** %5, align 8
  %21 = call i32 @free_textures(%struct.gpu_delay_filter_data* %20)
  ret void
}

declare dso_local i64 @obs_data_get_int(i32*, i32) #1

declare dso_local i32 @free_textures(%struct.gpu_delay_filter_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
